# tap-hotmart

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: checks.yml  publish.yml
tap_hotmart/: client.py  streams.py  tap.py
tap_hotmart/schemas/: commissions.json  products.json  subscriptions.json  transactions.json
tests/: conftest.py  sanitize_cassettes.py  test_client.py  test_core.py  test_streams.py
